--- a/solar.html
+++ b/solar.html
@@ -8,6 +8,9 @@
     <title>Cybertec Enterprises</title>
     <link rel="stylesheet" href="style_solar.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Play&family=Poppins&display=swap" rel="stylesheet">
   </head>
   
   <body>
