--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                                 <a class="nav-link" href="services.html">Services</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="solar.html">Solar</a>
+                                <a class="nav-link" href="solar.html">Enterprises Network</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="contactus.html">Contact Us</a>
@@ -67,7 +67,7 @@
                 
                 <div class="slideshow-text">
                     <h1>Welcome to Cybertec Enterprises</h1>
-                    <p>Our website provides you information about us, products and services we offer while providing links to our world class principles. Cybertec offers services in telecommunication, videos, and broadcast.</p>
+                    <p>Our website provides you information about us, products and services we offer while providing links to our world class principles. Cybertec offers services in Telecommunication, Broadcast & Enterprise Networks.</p>
                     <a href="contactus.html" class="btn">Contact Us</a>
                 </div>
             </div>
@@ -173,7 +173,7 @@
                             <a href="index.html">Home</a>
                             <a href="#">About Us</a>
                             <a href="services.html">Services</a>
-                            <a href="solar.html">Solar</a>
+                            <a href="solar.html">Enterprises Network</a>
                             <a href="contactus.html">Contact Us</a>
                         </div>
                         <div class="box">
