--- a/majorClients.html
+++ b/majorClients.html
@@ -46,7 +46,7 @@
                                 <a class="nav-link" href="services.html">Services</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="solar.html">Solar</a>
+                                <a class="nav-link" href="solar.html">Enterprises Network</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="contactus.html">Contact Us</a>
@@ -83,6 +83,19 @@
                     <div class="card" data-link="http://www.skynetwork.lk/"></div>
                     <div class="card" data-link="http://10.wataniya.com/default_en_gb.aspx"></div>
                     <div class="card" data-link="https://www.dialog.lk/home-broadband"></div>
+                    <div class="card" data-link="https://daimeislk.com/"></div>
+                    <div class="card" data-link="http://www.slts.lk/"></div>
+                    <div class="card" data-link="https://www.brownsengineering.com/"></div>
+                    <div class="card" data-link="https://www.luminexpl.com/home"></div>
+                    <div class="card" data-link="https://www.zte.com.cn/global/"></div>
+                    <div class="card" data-link="https://www.navy.lk/"></div>
+                    <div class="card" data-link="https://www.airforce.lk/"></div>
+                    <div class="card" data-link="https://www.army.lk/"></div>
+                    <div class="card" data-link="https://www.slpa.lk/"></div>
+                    <div class="card" data-link="https://www.defence.lk/"></div>
+                    <div class="card" data-link="https://www.airport.lk/"></div>
+                    <div class="card" data-link="https://www.boc.lk/"></div>
+                    <div class="card" data-link="https://fisheries.gov.ki/"></div>
                 </div>
 
                 <h3>Broadcasting </h3>
@@ -94,7 +107,11 @@
                     <div class="card" data-link=""></div>
                     <div class="card" data-link="http://www.dhiraagu.com/"></div>
                     <div class="card" data-link="https://www.sltvisioncom.lk/"></div>
-
+                    <div class="card" data-link="https://www.slt.lk/en/personal/peo-tv/packages-and-charges"></div>
+                    <div class="card" data-link=""></div>
+                    <div class="card" data-link="https://www.tv5monde.com/"></div>
+                    <div class="card" data-link="https://itn.lk/"></div>
+                    <div class="card" data-link="https://www.dishtv.in/"></div>
                 </div>
             </section>
 
@@ -109,7 +126,7 @@
                             <a href="index.html">Home</a>
                             <a href="#">About Us</a>
                             <a href="services.html">Services</a>
-                            <a href="solar.html">Solar</a>
+                            <a href="solar.html">Enterprises Network</a>
                             <a href="contactus.html">Contact Us</a>
                         </div>
                         <div class="box">
