--- a/services.html
+++ b/services.html
@@ -46,7 +46,7 @@
                                 <a class="nav-link" href="services.html">Services</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="solar.html">Solar</a>
+                                <a class="nav-link" href="solar.html">Enterprises Network</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="contactus.html">Contact Us</a>
@@ -128,7 +128,7 @@
                             <a href="index.html">Home</a>
                             <a href="#">About Us</a>
                             <a href="services.html">Services</a>
-                            <a href="solar.html">Solar</a>
+                            <a href="solar.html">Enterprises Network</a>
                             <a href="contactus.html">Contact Us</a>
                         </div>
                         <div class="box">
