--- a/majorClients.html
+++ b/majorClients.html
@@ -46,7 +46,7 @@
                                 <a class="nav-link" href="services.html">Services</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="solar.html">Enterprises Network</a>
+                                <a class="nav-link" href="solar.html">Enterprises Networking</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="contactus.html">Contact Us</a>
@@ -63,55 +63,55 @@
                 <h1>Major Clients</h1>
                 <h3>Telecommunication</h3>
                 <div class="cards">
-                    <div class="card" data-link="https://www.slt.lk/"></div>
-                    <div class="card" data-link="https://www.dialog.lk/"></div>
-                    <div class="card" data-link="https://www.lankabell.com/"></div>
-                    <div class="card" data-link="https://www.dhiraagu.com.mv/"></div>
-                    <div class="card" data-link="https://www.ntc.net.np/"></div>
-                    <div class="card" data-link="https://www.huawei.com/en/"></div>
-                    <div class="card" data-link="https://www.tigo.co.tz/"></div>
-                    <div class="card" data-link="https://hutch.lk/"></div>
-                    <div class="card" data-link="https://www.mobitel.lk/"></div>
-                    <div class="card" data-link="https://aviatnetworks.com/"></div>
-                    <div class="card" data-link="https://www.suntel.lk/home/"></div>
-                    <div class="card" data-link="https://www.maga.lk/"></div>
-                    <div class="card" data-link="https://access.lk/"></div>
-                    <div class="card" data-link="https://www.ericsson.com/en"></div>
-                    <div class="card" data-link="https://sierra.lk/"></div>
-                    <div class="card" data-link="http://www.etisalat.lk/"></div>
-                    <div class="card" data-link="https://www.nokia.com/networks/"></div>
-                    <div class="card" data-link="http://www.skynetwork.lk/"></div>
-                    <div class="card" data-link="http://10.wataniya.com/default_en_gb.aspx"></div>
-                    <div class="card" data-link="https://www.dialog.lk/home-broadband"></div>
-                    <div class="card" data-link="https://daimeislk.com/"></div>
-                    <div class="card" data-link="http://www.slts.lk/"></div>
-                    <div class="card" data-link="https://www.brownsengineering.com/"></div>
-                    <div class="card" data-link="https://www.luminexpl.com/home"></div>
-                    <div class="card" data-link="https://www.zte.com.cn/global/"></div>
-                    <div class="card" data-link="https://www.navy.lk/"></div>
-                    <div class="card" data-link="https://www.airforce.lk/"></div>
-                    <div class="card" data-link="https://www.army.lk/"></div>
-                    <div class="card" data-link="https://www.slpa.lk/"></div>
-                    <div class="card" data-link="https://www.defence.lk/"></div>
-                    <div class="card" data-link="https://www.airport.lk/"></div>
-                    <div class="card" data-link="https://www.boc.lk/"></div>
-                    <div class="card" data-link="https://fisheries.gov.ki/"></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
                 </div>
 
                 <h3>Broadcasting </h3>
                 <div class="cards_2">
-                    <div class="card" data-link="http://www.rupavahini.lk/"></div>
-                    <div class="card" data-link="https://www.dialog.lk/dialog-television"></div>
-                    <div class="card" data-link=""></div>
-                    <div class="card" data-link=""></div>
-                    <div class="card" data-link=""></div>
-                    <div class="card" data-link="http://www.dhiraagu.com/"></div>
-                    <div class="card" data-link="https://www.sltvisioncom.lk/"></div>
-                    <div class="card" data-link="https://www.slt.lk/en/personal/peo-tv/packages-and-charges"></div>
-                    <div class="card" data-link=""></div>
-                    <div class="card" data-link="https://www.tv5monde.com/"></div>
-                    <div class="card" data-link="https://itn.lk/"></div>
-                    <div class="card" data-link="https://www.dishtv.in/"></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
+                    <div class="card" ></div>
                 </div>
             </section>
 
@@ -124,9 +124,9 @@
                         <div class="box">
                             <h3>Quick Links</h3>
                             <a href="index.html">Home</a>
-                            <a href="#">About Us</a>
+                            <a href="about.html">About Us</a>
                             <a href="services.html">Services</a>
-                            <a href="solar.html">Enterprises Network</a>
+                            <a href="solar.html">Enterprises Networking</a>
                             <a href="contactus.html">Contact Us</a>
                         </div>
                         <div class="box">
