--- a/partners.html
+++ b/partners.html
@@ -46,7 +46,7 @@
                                 <a class="nav-link" href="services.html">Services</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="solar.html">Enterprises Network</a>
+                                <a class="nav-link" href="solar.html">Enterprises Networking</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="contactus.html">Contact Us</a>
@@ -68,14 +68,14 @@
                     <div class="news-card__text-wrapper">
                         <h2 class="news-card__title">CyberLink</h2>
                         <div class="news-card__details-wrapper">
-                            <p class="news-card__excerpt">This is our own brand in our Company (Cybertec Enterprises). This is one of the major part in our company.</p>
+                            <p class="news-card__excerpt">Passive Optical Network accessories.</p>
                         </div>
                     </div>
                 </div>
             
                 <div class="news-card">
                     <a href="#" class="news-card__card-link"></a>
-                    <img src="images/te-connect.jpeg" alt="" class="news-card__image">
+                    <img src="images/tec.png" alt="" class="news-card__image">
                     <div class="news-card__text-wrapper">
                         <h2 class="news-card__title">TE CONNECTIVITY</h2>
                         <div class="news-card__details-wrapper">
@@ -87,7 +87,7 @@
 
                 <div class="news-card">
                     <a href="#" class="news-card__card-link"></a>
-                    <img src="images/imagine.jpeg" alt="" class="news-card__image">
+                    <img src="images/imagine.png" alt="" class="news-card__image">
                     <div class="news-card__text-wrapper">
                         <h2 class="news-card__title">IMAGINE COMMUNICATIONS</h2>
                         <div class="news-card__details-wrapper">
@@ -111,7 +111,7 @@
 
                 <div class="news-card">
                     <a href="#" class="news-card__card-link"></a>
-                    <img src="images/lg-ericsson.jpeg" alt="" class="news-card__image">
+                    <img src="images/lge.png" alt="" class="news-card__image">
                     <div class="news-card__text-wrapper">
                         <h2 class="news-card__title">LG-ERICSSON</h2>
                         <div class="news-card__details-wrapper">
@@ -154,7 +154,7 @@
                     <div class="news-card__text-wrapper">
                         <h2 class="news-card__title">ATEME</h2>
                         <div class="news-card__details-wrapper">
-                            <p class="news-card__excerpt">You will be able to take initiative, be creative, and communicate openly with each Atemian. Our company is continuously growing and is unique because of the diversity of our people – we have different levels of experience and come from more than 46 countries – and because of our ability to make decisions quickly.</p>
+                            <p class="news-card__excerpt">Ateme offers fully integrated solutions for video delivery that help you boost viewership engagement, acquire new customers, and unleash monetization potential.</p>
                         </div>
                     </div>
                 </div>
@@ -177,7 +177,7 @@
                     <div class="news-card__text-wrapper">
                         <h2 class="news-card__title">SYNAMEDIA</h2>
                         <div class="news-card__details-wrapper">
-                            <p class="news-card__excerpt">Our smart business insights and advanced advertising platforms create more personalised and memorable experiences, whilst our agile model helps operators and streamers grow at speed.</p>
+                            <p class="news-card__excerpt">Service Provider Video Software Solutions (SPVSS)</p>
                         </div>
                     </div>
                 </div>
@@ -206,11 +206,11 @@
 
                 <div class="news-card">
                     <a href="#" class="news-card__card-link"></a>
-                    <img src="images/cisco.jpeg" alt="" class="news-card__image">
+                    <img src="images/cyc.png" alt="" class="news-card__image">
                     <div class="news-card__text-wrapper">
                         <h2 class="news-card__title">CISCO</h2>
                         <div class="news-card__details-wrapper">
-                            <p class="news-card__excerpt">Get started with the right security solution for you. Try out our security solutions before you buy them.</p>
+                            <p class="news-card__excerpt">Cisco is a worldwide technology leader. Our purpose is to power an inclusive future for all through software, networking, security, computing, and more.</p>
                         </div>
                     </div>
                 </div>
@@ -219,16 +219,16 @@
                     <a href="#" class="news-card__card-link"></a>
                     <img src="images/fujikara1.png" alt="" class="news-card__image">
                     <div class="news-card__text-wrapper">
-                        <h2 class="news-card__title">FUJIKARA</h2>
+                        <h2 class="news-card__title">FUJIKURA</h2>
                         <div class="news-card__details-wrapper">
-                            <p class="news-card__excerpt">Cybertec Enterprises has a connection with Fujikara Ltd & Grandway Ltd.</p>
+                            <p class="news-card__excerpt">Over the past 29 years, Grandway has been focusing on FTTH last mile network, testing and solutions.</p>
                         </div>
                     </div>
                 </div>
 
                 <div class="news-card">
                     <a href="#" class="news-card__card-link"></a>
-                    <img src="images/shineway.jpeg" alt="" class="news-card__image">
+                    <img src="images/SWT.png" alt="" class="news-card__image">
                     <div class="news-card__text-wrapper">
                         <h2 class="news-card__title">SHINEWAYTECH</h2>
                         <div class="news-card__details-wrapper">
@@ -249,9 +249,9 @@
                         <div class="box">
                             <h3>Quick Links</h3>
                             <a href="index.html">Home</a>
-                            <a href="#">About Us</a>
+                            <a href="about.html">About Us</a>
                             <a href="services.html">Services</a>
-                            <a href="solar.html">Enterprises Network</a>
+                            <a href="solar.html">Enterprises Networking</a>
                             <a href="contactus.html">Contact Us</a>
                         </div>
                         <div class="box">
