--- a/services.html
+++ b/services.html
@@ -46,7 +46,7 @@
                                 <a class="nav-link" href="services.html">Services</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="solar.html">Enterprises Network</a>
+                                <a class="nav-link" href="solar.html">Enterprises Networking</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="contactus.html">Contact Us</a>
@@ -94,7 +94,7 @@
 
                 <article class="postcard dark green">
                     <a class="postcard__img_link" href="#">
-                        <img class="postcard__img" src="staff1.jpg" alt="Image Title" />
+                        <img class="postcard__img" src="pas.jpg" alt="Image Title" />
                     </a>
                     <div class="postcard__text">
                         <h1 class="postcard__title green"><a href="#">Product Training at Factory or Customer Site</a></h1>
@@ -126,9 +126,9 @@
                         <div class="box">
                             <h3>Quick Links</h3>
                             <a href="index.html">Home</a>
-                            <a href="#">About Us</a>
+                            <a href="about.html">About Us</a>
                             <a href="services.html">Services</a>
-                            <a href="solar.html">Enterprises Network</a>
+                            <a href="solar.html">Enterprises Networking</a>
                             <a href="contactus.html">Contact Us</a>
                         </div>
                         <div class="box">
