--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                                 <a class="nav-link" href="services.html">Services</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="solar.html">Enterprises Network</a>
+                                <a class="nav-link" href="solar.html">Enterprises Networking</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="contactus.html">Contact Us</a>
@@ -173,7 +173,7 @@
                             <a href="index.html">Home</a>
                             <a href="#">About Us</a>
                             <a href="services.html">Services</a>
-                            <a href="solar.html">Enterprises Network</a>
+                            <a href="solar.html">Enterprises Networking</a>
                             <a href="contactus.html">Contact Us</a>
                         </div>
                         <div class="box">
