--- a/caseStudies.html
+++ b/caseStudies.html
@@ -403,7 +403,7 @@
             <div class="box">
                 <h3>Quick Links</h3>
                 <a href="index.html">Home</a>
-                <a href="#">About Us</a>
+                <a href="about.html">About Us</a>
                 <a href="services.html">Services</a>
                 <a href="solar.html">Enterprises Networking</a>
                 <a href="contactus.html">Contact Us</a>
@@ -423,7 +423,7 @@
             </div>
             <div class="box">
                 <h3>Follow Us</h3>
-                <a href="#">Facebook</a>
+                <a href="https://www.facebook.com/cybertecent?mibextid=WC7FNe&rdid=NyplIV6oWL7qSe41">Facebook</a>
                 <a href="#">Instagram</a>
                 <a href="#">Twitter</a>
                 <a href="#">Linked in</a>
