--- a/partners.html
+++ b/partners.html
@@ -269,7 +269,7 @@
                         </div>
                         <div class="box">
                             <h3>Follow Us</h3>
-                            <a href="#">Facebook</a>
+                            <a href="https://www.facebook.com/cybertecent?mibextid=WC7FNe&rdid=NyplIV6oWL7qSe41">Facebook</a>
                             <a href="#">Instagram</a>
                             <a href="#">Twitter</a>
                             <a href="#">Linked in</a>
