--- a/solar.html
+++ b/solar.html
@@ -81,8 +81,8 @@
     <section class="bg-light">
       <div class="container">
         <div class="col-md-10">
-          <h1 class="text-center text-md-left" id="solar">Cybertec Enterprises Networking</h1>
-          <h1 class="details">( Work in Progress )</h1>
+          <h1 class="text-center text-md-left" id="solar">Enterprises Networking</h1>
+          <h1 class="details">( Work in Progress.... )</h1>
         </div>
         <!-- <h1 class="text-center my-5">
           Solar panels are not just a source of energy. <br />They're a promise
