--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                                 <a class="nav-link" href="services.html">Services</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="solar.html">Enterprises Networking</a>
+                                <a class="nav-link" href="solar.html">Enterprise Networking</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="contactus.html">Contact Us</a>
@@ -77,7 +77,6 @@
 
         <section><br>
             <div class="content2">
-                <h1 class="title">Recent Projects We Did</h1><br>
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card">
@@ -101,10 +100,10 @@
 
                     <div class="col-md-4">
                         <div class="card">
-                            <img src="images/solar.jpg" alt="John" class="card-img-top">
+                            <img src="en2.png" alt="John" class="card-img-top">
                             <div class="card-body">
-                                <h1 class="card-title">Solar Power</h1>
-                                <p class="card-text">Harnessing the Power of the Sun for Tomorrow.</p>
+                                <h1 class="card-title">Enterprise Networking</h1>
+                                <p class="card-text">Empowering Connections, Elevating Enterprise: Where Networking Meets Innovation.</p>
                             </div>
                         </div>
                     </div>
@@ -116,7 +115,7 @@
 
         <section>
             <div class="content3">
-                <h1 class="title1">Features Projects</h1>
+                <h1 class="title1">Featured Projects</h1>
                 <div class="row">
                     <div class="col-md-3">
                         <div class="card2">
@@ -173,7 +172,7 @@
                             <a href="index.html">Home</a>
                             <a href="#">About Us</a>
                             <a href="services.html">Services</a>
-                            <a href="solar.html">Enterprises Networking</a>
+                            <a href="solar.html">Enterprise Networking</a>
                             <a href="contactus.html">Contact Us</a>
                         </div>
                         <div class="box">
